--- a/document/Windows.org
+++ b/document/Windows.org
@@ -9,3 +9,5 @@
   8. 右键该项目，选择“属性”，选择“C/C++”，在常规中编辑“附加包含目录”，为lua的目录
   9. 在选择“通用属性”-> “框架和引用”->“添加新引用”，引用lua所对应的lua静态库即可
   10. 之后编译该项目，就可以使用lua了
+* Windows磁盘分区对齐
+  https://community.emc.com/docs/DOC-18571
